--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env DB_ENV=testing jest --watch"
   },
   "jest": {
-    "testEnvirnoment": "node"
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
